manifests-successful/drogue-cloud-examples-0.7.11.tgz-manifest.yaml
---
# Source: drogue-cloud-examples/templates/grafana/service.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: grafana
  name: grafana
spec:
  ports:
    - name: web
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: grafana
---
# Source: drogue-cloud-examples/templates/pusher/service.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: timescaledb-pusher
  name: timescaledb-pusher
spec:
  ports:
    - name: web
      port: 80
      targetPort: web
      protocol: TCP
  selector:
    app: timescaledb-pusher
---
# Source: drogue-cloud-examples/templates/timescaledb/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: timescaledb
  labels:
    app: timescaledb
spec:
  selector:
    app: timescaledb

  type: ClusterIP

  ports:
    - name: postgres
      port: 5432
      protocol: TCP
      targetPort: 5432
---
# Source: drogue-cloud-examples/templates/grafana/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: grafana
  labels:
    app: grafana
    app.kubernetes.io/part-of: example-app
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"StatefulSet","name":"timescaledb"}]'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: grafana
      annotations:
        checksum/config: 783020ec29d54e0b1f10c8463a32685f915d8de8e6a1e052fe870a584a571630
        checksum/config-timescale: 282c741315a25e27268a5f827f43e0da571b18ea0b3e6224741fa22a95937be6
        checksum/secret-timescale: bb36db7a8d2b6ee79fcba40b8d5468b839332016412a694e3d194f623766149a
    spec:
      serviceAccountName: grafana
      

      containers:
        - name: grafana
          image: docker.io/grafana/grafana:9.2.4
          imagePullPolicy: IfNotPresent
          

          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            timeoutSeconds: 1
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            timeoutSeconds: 1
          ports:
            - containerPort: 3000
              name: web
              protocol: TCP
          resources:
            limits:
              memory: 1Gi
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: grafana-storage
            - mountPath: /etc/grafana/provisioning/datasources
              name: grafana-datasources
            - mountPath: /etc/grafana/provisioning/dashboards
              name: grafana-dashboard-providers
            - mountPath: /var/lib/grafana/dashboards
              name: grafana-dashboards

      volumes:
        - name: grafana-storage
          persistentVolumeClaim:
            claimName: grafana-pvc
        - name: grafana-datasources
          configMap:
            name: grafana-datasources
        - name: grafana-dashboard-providers
          configMap:
            name: grafana-dashboard-providers
        - name: grafana-dashboards
          emptyDir: {}
---
# Source: drogue-cloud-examples/templates/pusher/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: timescaledb-pusher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: timescaledb-pusher
  template:
    metadata:
      labels:
        app: timescaledb-pusher
    spec:
      

      containers:
        - name: timescaledb-pusher
          image: ghcr.io/drogue-iot/postgresql-pusher:0.2.1
          imagePullPolicy: IfNotPresent
          

          ports:
          - containerPort: 8080
            name: web
            protocol: TCP
---
# Source: drogue-cloud-examples/templates/source/drogue/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: drogue-event-source
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drogue-event-source
  template:
    metadata:
      labels:
        app: drogue-event-source
    spec:
      

      containers:
        - name: drogue-event-source
          image: ghcr.io/drogue-iot/drogue-event-source:0.2.1
          imagePullPolicy: IfNotPresent
          
---
# Source: drogue-cloud-examples/templates/timescaledb/statefulset.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: timescaledb
  labels:
    app: timescaledb
    app.kubernetes.io/part-of: example-app
spec:
  replicas: 1
  serviceName: timescaledb
  selector:
    matchLabels:
      app: timescaledb
  template:
    metadata:
      labels:
        app: timescaledb
    spec:
      

      containers:
        - name: timescaledb
          image: docker.io/timescale/timescaledb-ha:pg14-ts2.6-latest
          imagePullPolicy: IfNotPresent
          

          volumeMounts:
            - mountPath: /var/lib/storage
              name: storage
              subPath: pgdata
            - mountPath: /docker-entrypoint-initdb.d
              name: initdb
            - mountPath: /var/run/postgresql
              name: run-postgres
      volumes:
        - name: initdb
          emptyDir: {}
        - name: run-postgres
          emptyDir: {}
        - name: initdb-config
          configMap:
            name: timescaledb-initdb

  volumeClaimTemplates:
    - metadata:
        name: storage
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 5Gi
---
# Source: drogue-cloud-examples/templates/grafana/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: grafana
  annotations:
    
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: grafana.my-cluster.dns
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  name: web
